Remove gi.py and add cleanup commands to manifest.json for improved build process

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
         "--socket=fallback-x11",
         "--socket=wayland"
     ],
+    "cleanup": ["/include", "/lib/pkgconfig", "*.la", "*.a"],
+    "cleanup-commands": [
+        "rm -rf /app/include",
+        "rm -rf /app/lib/pkgconfig"
+    ],
     "modules": [
         {
             "name": "gtk3",
@@ -27,6 +32,7 @@
                 "install -Dm644 com.rhtraining.demoapp.desktop /app/share/applications/com.rhtraining.demoapp.desktop",
                 "install -Dm644 com.rhtraining.demoapp.png /app/share/icons/hicolor/128x128/apps/com.rhtraining.demoapp.png"
             ],
+            "cleanup": ["*.la", "*.a"],
             "sources": [
                 {
                     "type": "file",
