--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "runtime": "com.redhat.Platform",
     "runtime-version": "el9",
     "sdk": "com.redhat.Sdk",
-    "command": "python3",
+    "command": "python3 hello-world.py",
     "finish-args": [
         "--share=ipc",
         "--socket=fallback-x11",
