Update manifest.json to change build command for python3-gobject installation

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
             "name": "python3",
             "buildsystem": "simple",
             "build-commands": [
-                "pip3 install --no-index --find-links=\"file://${PWD}\" --prefix=/app python3-gobject"
+                "dnf install -y python3-gobject"
             ],
             "sources": [
                 {
